# pdfqanda

./: .env.sample  AGENTS.md  FINAL_STATE.md  LICENSE  PLAN.md  README.md  pyproject.toml  schema.sql
db/: schema.sql
src/pdfqanda/: __init__.py  cli.py  config.py  db.py  embedding.py  expert.py  ingest.py  models.py  qa.py  researcher.py  retrieval.py  segmenter.py  splitter.py  vectorstore.py
src/pdfqanda/agents/: __init__.py  expert.py  researcher.py
src/pdfqanda/ingest/: __init__.py  pipeline.py
src/pdfqanda/retrieval/: __init__.py  core.py
src/pdfqanda/util/: __init__.py  cache.py  db.py  embeddings.py  migrations.py  vector_index.py
test_results/: pytest-latest.txt
tests/: test_fedex_rates.py  test_ingest.py  test_ingest_ask.py  test_ingest_pipeline.py  test_notes_graphics_smoke.py  test_qa.py  test_researcher_expert.py  test_splitter.py  test_vector_index.py  test_vectorstore.py
